--- a/index.html
+++ b/index.html
@@ -1,10 +1,122 @@
 <!DOCTYPE html>
 <html lang="ru">
   <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./fonts/fonts.css">
+    <link rel="stylesheet" href="./styles/global.css">
+    <link rel="stylesheet" href="./styles/style.css">
     <title>Оно тебе надо — аукцион вещей, в которые никто не верил</title>
   </head>
-  <body></body>
+  <body>
+    <header class="header body__header">
+      <nav>
+        <ul class="header__links-list">
+          <li class="header__links-list-item header__links-list-item_no-bullit"><a class="header__link header__link_active">главная</a></li>
+          <li class="header__links-list-item"><a class="header__link">посмотреть лоты</a></li>
+          <li class="header__links-list-item"><a class="header__link">об аукционе</a></li>
+        </ul>
+      </nav>
+      <a class="header__logo">
+        <img src="./images/logo-black.svg" alt="Логотип" class="header__logo-image">
+      </a>
+      <address class="address header__address">
+        <a href="tel:+99995555555" class="address__communication">+9 999 555 5555</a><br>
+        <a href="mailto:info@sobaka.ge" class="address__communication">info@sobaka.ge</a>
+        <p>наб. Принсенграхт 263-265, Амстердам</p>
+      </address>
+    </header>
+    <main>
+      <section class="cover">
+        <div class="overlay"></div>
+        <h1 class="cover__title no-letter-spacing">
+          <span class="aligned-text">о<span class="letter-spacing-extended">но</span></span>
+          <span class="aligned-text aligned-text_center">те<span class="letter-spacing-extended">бе</span></span>
+          <span class="aligned-text aligned-text_right"><span class="letter-spacing-extended">н</span>адо</span>
+        </h1>
+        <div class="cover__description">
+          <p class="cover__description-text">аукцион    вещей,    в    которые    никто    не     верил</p>
+          <a class="bet-button"><p class="bet-button__text">сделать ставку</p></a>
+        </div>
+      </section>
+      <section class="lots main__lots">
+        <h2 class="lots__heading">лоты</h2>
+        <ul class="lots__card-list">
+          <li class="lots__card-list-item">
+            <a class="card-link">
+              <div class="card card_type_film">
+                <div class="overlay"></div>
+                <p class="card__title">Фильм режиссёра, который  бросил киношколу</p>
+                <p class="card__text">Не просто бросил, а ушёл с первой лекции. Какой была бы ваша ставка, если бы вы не знали, что режиссёр — Пол Томас Андерсон?</p>
+              </div>
+            </a>
+          </li>
+          <li class="lots__card-list-item">
+            <a class="card-link">
+              <div class="card card_type_book">
+                <div class="overlay"></div>
+                <p class="card__title">Книга, где описан один скучный день из жизни рекламного агента</p>
+                <p class="card__text">Объёмом почти в тысячу страниц. Иногда без знаков препинания и с переходами на древнеанглийский. В ней одновременно рассказывается о 16 июня 1904 года и об истории литературы, начиная с античных времён. И это всё накладывается на эпическую поэму Гомера. Сколько бы вы поставили на «Улисса» Джеймса Джойса?</p>
+              </div>
+            </a>
+          </li>          
+          <li class="lots__card-list-item">
+            <a class="card-link">
+              <div class="card card_type_picture">
+                <div class="overlay"></div>
+                <p class="card__title">Картина, которую повторит даже 5-летний сын маминой подруги</p>
+                <p class="card__text">Ну действительно, там линия, тут кружочек, а здесь и вовсе что-то похожее на инфузорию-туфельку. Никаких полей, лесов, котиков… Сколько бы вы на такое поставили, если бы не знали, что это — одна из революционных работ Кандинского?</p>
+              </div>
+            </a>            
+          </li>               
+        </ul>
+        <a class="lots__look-more-link">посмотреть больше</a>
+      </section>
+      <section class="about main__about">
+        <div class="about__logo-column">
+          <div class="about__logo">
+            <img src="./images/logo-white.svg" alt="Логотип" class="about__logo-image">
+          </div>
+        </div>
+        <div class="about__column">
+          <h2 class="about__title">Об аукционе</h2>
+          <p class="about__text">Здесь вы не встретите очередное пафосное собрание невероятно дорогого антиквариата. Наши лоты вообще не должны были попасть ни на один аукцион. Потому что кому нужен дневник девочки-подростка или картина, которую может нарисовать даже ребёнок? Кому нужны все эти странные вещи, созданные любителями?</p>
+          <p class="about__text about__text_last">Слишком сложные или, наоборот, слишком простые. Опережающие своё время. В пух и прах растерзанные критиками. Непринятые и непонятые. Когда-то они казались просто неудачными. Но, несмотря на критику, кажущуюся простоту или сложность, сейчас без этих лотов невозможно представить современную культуру. Когда в эти вещи не верил никто, продолжали верить их создатели. И сейчас эти лоты стали культовыми. </p>
+        </div>
+      </section>
+    </main>
+    <footer class="footer body__footer">
+      <address class="address">
+        <a href="tel:+99995555555" class="address__communication">+9 999 555 5555</a><br>
+        <a href="mailto:info@sobaka.ge" class="address__communication">info@sobaka.ge</a>
+        <p>наб. Принсенграхт 263-265, Амстердам</p>
+      </address>
+      <nav>
+        <ul class="footer__menu-list">
+          <li class="footer__menu-list-item"><a class="footer__menu-link footer__menu-link_active">главная</a></li>
+          <li class="footer__menu-list-item"><a class="footer__menu-link">посмотреть лоты</a></li>
+          <li class="footer__menu-list-item"><a class="footer__menu-link">об аукционе</a></li>
+        </ul>
+      </nav>
+      <ul class="footer__social-list">
+        <li class="footer__social-list-item">
+          <a href="https://www.youtube.com/" class="footer__social-link" target="_blank">
+            <img src="./images/yt.svg" alt="Иконка YouTube" class="footer__social-icon">
+          </a>
+        </li>
+        <li class="footer__social-list-item">
+          <a href="https://vk.com/" class="footer__social-link" target="_blank">
+            <img src="./images/vk.svg" alt="Иконка ВКонтакте" class="footer__social-icon">
+          </a>
+        </li>
+        <li class="footer__social-list-item">
+          <a href="http://www.pinterest.com/" class="footer__social-link" target="_blank">
+            <img src="./images/pinterest.svg" alt="Иконка Pinterest" class="footer__social-icon">
+          </a>
+        </li>
+      </ul>
+    </footer>
+  </body>
 </html>
+
