--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <div class="overlay"></div>
         <h1 class="cover__title no-letter-spacing">
           <span class="aligned-text">о<span class="letter-spacing-extended">но</span></span>
-          <span class="aligned-text aligned-text_center">те<span class="letter-spacing-extended">бе</span></span>
+          <span class="aligned-text aligned-text_paddings aligned-text_center">те<span class="letter-spacing-extended">бе</span></span>
           <span class="aligned-text aligned-text_right"><span class="letter-spacing-extended">н</span>адо</span>
         </h1>
         <div class="cover__description">
