--- a/index.html
+++ b/index.html
@@ -30,14 +30,14 @@
     <main>
       <section class="cover">
         <div class="overlay"></div>
-        <h1 class="cover__title no-letter-spacing">
-          <span class="aligned-text">о<span class="letter-spacing-extended">но</span></span>
+        <h1 class="cover__title">
+          <span class="aligned-text aligned-text_specific-line-height">о<span class="letter-spacing-extended">но</span></span>
           <span class="aligned-text aligned-text_paddings aligned-text_center">те<span class="letter-spacing-extended">бе</span></span>
-          <span class="aligned-text aligned-text_right"><span class="letter-spacing-extended">н</span>адо</span>
+          <span class="aligned-text aligned-text_right"><span class="letter-spacing-extended">н</span>ад<span class="no-letter-spacing">о</span></span>
         </h1>
         <div class="cover__description">
           <p class="cover__description-text">аукцион    вещей,    в    которые    никто    не     верил</p>
-          <a class="bet-button"><p class="bet-button__text">сделать ставку</p></a>
+          <button class="bet-button" type="button">сделать ставку</button>
         </div>
       </section>
       <section class="lots main__lots">
@@ -47,7 +47,7 @@
             <a class="card-link">
               <div class="card card_type_film">
                 <div class="overlay"></div>
-                <p class="card__title">Фильм режиссёра, который  бросил киношколу</p>
+                <h3 class="card__title">Фильм режиссёра, который  бросил киношколу</h3>
                 <p class="card__text">Не просто бросил, а ушёл с первой лекции. Какой была бы ваша ставка, если бы вы не знали, что режиссёр — Пол Томас Андерсон?</p>
               </div>
             </a>
@@ -56,7 +56,7 @@
             <a class="card-link">
               <div class="card card_type_book">
                 <div class="overlay"></div>
-                <p class="card__title">Книга, где описан один скучный день из жизни рекламного агента</p>
+                <h3 class="card__title">Книга, где описан один скучный день из жизни рекламного агента</h3>
                 <p class="card__text">Объёмом почти в тысячу страниц. Иногда без знаков препинания и с переходами на древнеанглийский. В ней одновременно рассказывается о 16 июня 1904 года и об истории литературы, начиная с античных времён. И это всё накладывается на эпическую поэму Гомера. Сколько бы вы поставили на «Улисса» Джеймса Джойса?</p>
               </div>
             </a>
@@ -65,7 +65,7 @@
             <a class="card-link">
               <div class="card card_type_picture">
                 <div class="overlay"></div>
-                <p class="card__title">Картина, которую повторит даже 5-летний сын маминой подруги</p>
+                <h3 class="card__title">Картина, которую повторит даже 5-летний сын маминой подруги</h3>
                 <p class="card__text">Ну действительно, там линия, тут кружочек, а здесь и вовсе что-то похожее на инфузорию-туфельку. Никаких полей, лесов, котиков… Сколько бы вы на такое поставили, если бы не знали, что это — одна из революционных работ Кандинского?</p>
               </div>
             </a>            
@@ -100,17 +100,17 @@
         </ul>
       </nav>
       <ul class="footer__social-list">
-        <li class="footer__social-list-item">
+        <li>
           <a href="https://www.youtube.com/" class="footer__social-link" target="_blank">
             <img src="./images/yt.svg" alt="Иконка YouTube" class="footer__social-icon">
           </a>
         </li>
-        <li class="footer__social-list-item">
+        <li>
           <a href="https://vk.com/" class="footer__social-link" target="_blank">
             <img src="./images/vk.svg" alt="Иконка ВКонтакте" class="footer__social-icon">
           </a>
         </li>
-        <li class="footer__social-list-item">
+        <li>
           <a href="http://www.pinterest.com/" class="footer__social-link" target="_blank">
             <img src="./images/pinterest.svg" alt="Иконка Pinterest" class="footer__social-icon">
           </a>
